0028248: [Regression] HLR Algo result is retrieved from the last added shape only

Mistakes in retrieving of HLRBRep_EdgeData by value instead of reference have been corrected.